# FastAPI-T5-base-model

./: Dockerfile  README.md  pyproject.toml
pyproject/: main.py
pyproject/api/v1/: translate.py
pyproject/schemes/: translate.py
